Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-12-28 (SVN):
    * cvar.c (Cvar_Set): Simplified.
    * quakedef.h: updated beta date stamp to 2011-12-28.

2011-12-27 (SVN):
    * sv_main.c: Removed mistakenly added notify callback for sv_stopspeed.

2011-12-27 (SVN):
    * qsnprint.c (q_vsnprintf): Don't attempt to nul terminate the buffer
      if zero size was passed. From Sander van Dijk.

2011-12-27 (SVN):
    * cfgfile.c (CFG_ReadCvars): Also check for ferror(). Use FS_rewind()
      instead of FS_fseek(). From Sander van Dijk.

2011-12-27 (SVN):
    * model.c, gl_model.c (Mod_LoadEntities, Mod_LoadLighting): Consistent
      use of q_strlcpy and q_strlcat.
    * sv_main.c (SV_SpawnServer): Consistent use of q_strlcpy.

2011-12-27 (SVN):
    * strlcat.c, strlcpy.c: Removed the arch_def.h includes.

2011-12-27 (SVN):
    * Makefiles update: passing the libraries to linker before passing
      the object list is a bad idea.

2011-12-27 (SVN):
    * pr_edict.c (ED_LoadFromFile): Remove error when neither coop nor
      deathmatch was set in h2ded builds, rely on server admin's skills.

2011-12-27 (SVN):
    * Removed old QIP code that prevented coop and deathmatch to be set
      at the same time.  I was notified that it may actually cause some
      compatibility issues.  Just made sure that coop and deathmatch are
      cleared when starting a game from the menu system.

2011-12-27 (SVN):
    * common.c (COM_StripExtension): If the input is empty, just write a
      0 to the output and return.
    * quakedef.h: updated beta date stamp to 2011-12-27.

2011-12-25 (SVN):
    * view.c (V_UpdatePalette): Make use of CVAR_CHANGED flag of v_gamma.

2011-12-25 (SVN):
    * snd_dma.c: Use a callback with sfxvolume and drop the CVAR_CHANGED
      checks.

2011-12-25 (SVN):
    * screen.c, gl_screen.c: Use a callback with scr_fov and scr_viewsize
      and drop the CVAR_CHANGED checks.

2011-12-25 (SVN):